WIP bump and study v16

--- a/src/lithium/doc/lithium16.tex
+++ b/src/lithium/doc/lithium16.tex
@@ -274,12 +274,16 @@ which can be turned into an \textbf{unified} set of equations using
 \end{equation}
 and obviously
 \begin{equation}
-	\deltaLi = 1000 \left ( \left[1+10^{-3}\deltaLiOut\right] \dfrac{\beta_7}{\beta_6}-1\right)
+	\deltaLi = 1000 \left ( \left[1+10^{-3}\deltaLiOut\right] \dfrac{(1-\epsilon)\beta_7}{\epsilon\beta_6}-1\right)
 \end{equation}
 or
 \begin{equation}
-	\dfrac{\beta_7}{\beta_6} = \dfrac{\left[1+10^{-3}\deltaLi\right]}{\left[1+10^{-3}\deltaLiOut\right]}
+	\dfrac{(1-\epsilon)\beta_7}{\epsilon\beta_6} = \dfrac{\left[1+10^{-3}\deltaLi\right]}{\left[1+10^{-3}\deltaLiOut\right]}
 \end{equation}
+
+\fbox{
+	$\dfrac{\beta_7}{\beta_6}$ is the ratio between the internal isotopic separation and the external isotopic separation
+}
 
 \begin{equation}
 %\boxed{
