need to simplify with time...

--- a/src/lithium/doc/lithium16.tex
+++ b/src/lithium/doc/lithium16.tex
@@ -345,7 +345,45 @@ or
 \end{array}
 \right.
 \end{equation}
+Using 
+\begin{equation}
+	E_0 = \eta \LiAllOut
+\end{equation}
 
+We define 
+\begin{equation}
+\left\lbrace
+\begin{array}{ccll}
+	k_x^p J_x & = & k_x \bar{p}_x^2, & \bar{p}_x \text{ in M}^{-1} \\
+	k_x^q     & = & k_x \bar{q}_x  , & \bar{q}_x \text{ in M}^{-1} \\
+	\tilde{D} & = & 1+(\sum_x \epsilon_x J_x) \LiAllOut, & J_\epsilon = \epsilon J_6 + (1-\epsilon) J_7 \\
+\end{array}
+\right.
+\end{equation}
+
+\begin{equation}
+	\partial_t \beta_x + k_x \beta_x = k_x \left[ \Theta +
+	 \eta \left(
+	 \hat\alpha\dfrac{\bar{p}_x^2}{\tilde{D}} \LiAllOut \proton
+	 -(1-\hat\alpha) \bar{q}_x \LiAllOut \beta_x 
+	  \right) \right]
+\end{equation}
+and we set
+\begin{equation}
+	\Upsilon_x = \bar{p}_x^2 \dfrac{\LiAllOut}{1+J_\epsilon \LiAllOut} \; \text{ in M}^{-1} , \;\; Q_x = \bar{q}_x \LiAllOut \text{ as scalar}
+\end{equation}
+to get
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+	\partial_t \beta_x + k_x \beta_x & = & k_x \left[ \Theta + \eta \left( \hat\alpha \Upsilon_x \proton - (1-\hat\alpha)Q_x \beta_x \right) \right] \\
+	\\
+	\partial_t \hat\alpha & = & k_h - \hat\alpha \left\lbrack k_h+
+	 \proton \left(\sum_x \epsilon_x k_x \Upsilon_x \right) \right] 
+		+ (1-\hat\alpha) \left\lbrack {\sum_x \epsilon_x k_x Q_x \beta_x }  \right\rbrack \LiAllOut \\
+\end{array}
+\right.
+\end{equation}
 
 \centerline{-----------------------}
 
