--- a/src/lithium/doc/lithium16.tex
+++ b/src/lithium/doc/lithium16.tex
@@ -397,7 +397,7 @@ to get
 	\partial_\tau \beta_6 + \sigma \beta_6 & = & \sigma \left[ \Theta + \eta \left( \hat\alpha \Upsilon_6 \proton - (1-\hat\alpha)Q_6 \beta_6 \right) \right]\\
 	\\
 		\partial_\tau \hat\alpha & = & \mu - \hat\alpha \left\lbrack \mu +
-	 \proton \left(\epsilon\sigma\Upsilon_6 + (1-\epsilon)\Upsilon_7 \right) \right] 
+	 \proton \underbrace{\left(\epsilon\sigma\Upsilon_6 + (1-\epsilon)\Upsilon_7 \right)}_{\Upsilon_\alpha} \right] 
 		+ (1-\hat\alpha) \left\lbrack { \epsilon \sigma Q_6 \beta_6 + (1-\epsilon) Q_7 \beta_7  }  \right\rbrack \\
 \end{array}
 \right.
