will simulate some alpha...

--- a/src/lithium/doc/lithium18.tex
+++ b/src/lithium/doc/lithium18.tex
@@ -390,6 +390,16 @@ We get the system of equations
 \end{equation}
 
 
+\section{Solutions}
+\begin{itemize}
+\item $\proton$ is almost constant or decreasing
+\item $\beta_x$ is mostly increasing
+\end{itemize}
+so that $\hat\alpha$ shall decrease from $1$ to $\alpha_\infty$, and we approximate
+\begin{equation}
+	\hat\alpha \simeq \hat{\alpha}_\infty + \left( \right) e^{-\omega_0 t}
+\end{equation}
+
 \end{document}
 
 We define 
