rewrite with good function...

--- a/src/lithium/doc/lithium18.tex
+++ b/src/lithium/doc/lithium18.tex
@@ -516,7 +516,7 @@ Once $\hat\alpha$ is computed,
 	+ \dfrac{\eta}{\mu_x} \dfrac{h_0\Upsilon_x}{\Omega}
 	\left[
 	\left[ 1-e^{-\mu_x \tau}\right] 
-	+ \left(\Omega-1\right) B\left(\frac{\Omega}{\mu_x},\tau\right)
+	+ \left(\Omega-1\right) B\left(\frac{\Omega}{\mu_x},\mu_x\tau\right)
 	 \right]
 	\\
 \end{array}
@@ -539,7 +539,7 @@ We set
 so that
 \begin{equation}
 \beta_{x,0}(\tau) = \Theta \left[ 1-e^{-\mu_x \tau}\right]
-+ \dfrac{\eta}{\mu_x}  \cos^2 \varphi_x  \; \cos^2\theta \left[  \left[ 1-e^{-\mu_x \tau}\right] + \tan^2\theta \; B\left(\frac{1}{\mu_x\cos^2\theta},\mu_x \tau)\right)\right]
++ \dfrac{\eta}{\mu_x}  \cos^2 \varphi_x  \; \sin^2\theta \left[  \left[ 1-e^{-\mu_x \tau}\right] + \tan^2\theta \; B\left(\frac{1}{\mu_x\cos^2\theta},\mu_x \tau)\right)\right]
 \end{equation}
 
 \end{document}
